put all pages in the same html file; fixed header position.

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,15 @@ main {
     padding: 4rem 1rem 3rem 1rem;
 }
 
-#about main {
+#about {
+    margin-top: 5rem;
     padding: 1rem;
+    background-image: url("images/bg.jpg");
+    background-size: cover;
+}
+
+#about h2 {
+    padding-top: 2rem;
 }
 
 section {
@@ -94,6 +101,7 @@ section {
     flex-wrap: wrap;
     background-repeat: no-repeat;
     padding-top: 3.5rem;
+    box-sizing: border-box;
 }
 
 
@@ -159,6 +167,9 @@ section h2 {
     box-sizing: border-box;
     color: ghostwhite;
     text-align: justify;
+    font-size: 1.2rem;
+    line-height: 1.5;
+
 }
 
 
