--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ main {
 #about {
     margin-top: 5rem;
     padding: 1rem;
-    background-image: url("images/bg.jpg");
+    background-image: url("../images/bg.jpg");
     background-size: cover;
 }
 
@@ -169,6 +169,11 @@ section h2 {
     text-align: justify;
     font-size: 1.2rem;
     line-height: 1.5;
+    border: 2px solid ghostwhite;
+    border-radius: 4rem;
+    margin: 0 3rem 3rem 3rem;
+    background-color: #0c031c;
+    box-shadow: 0 0 14px #43FFE9;
 
 }
 
